# gerrit-cli

./: Cargo.toml
src/: cmd.rs  cmd_ls.rs  cmd_open.rs  cmd_status.rs  curl.rs  exec.rs  ger.rs  gerrit.rs  git.rs  git_gerrit.rs  main.rs  open.rs  print.rs  table.rs
